Add chrony configuration vars to site.tfvars.in
Signed-off-by: Zack Cerza <zack@redhat.com>

--- a/files/site.tfvars.in
+++ b/files/site.tfvars.in
@@ -21,6 +21,8 @@ cluster_domain              = "$CLUSTER_DOMAIN"
 cluster_id                  = "ocp$SANITIZED_OCP_VERSION"
 
 dns_forwarders              = "192.168.88.1;$DNS_BACKUP_SERVER"
+chrony_config               = true
+chrony_config_servers       = [$CHRONY_CONFIG_SERVERS]
 
 install_playbook_tag        = "9a5128fc58ed86aa332128314181dc9ab86334c6"
 
