--- a/files/site.tfvars.in
+++ b/files/site.tfvars.in
@@ -21,7 +21,7 @@ cluster_domain              = "$CLUSTER_DOMAIN"
 cluster_id                  = "ocp$SANITIZED_OCP_VERSION"
 
 dns_forwarders              = "192.168.88.1;$DNS_BACKUP_SERVER"
-chrony_config               = true
+chrony_config               = "$CHRONY_CONFIG"
 chrony_config_servers       = [$CHRONY_CONFIG_SERVERS]
 
 install_playbook_tag        = "c6e6038dba0856e621697c876bd3a65927f46166"
