haproxy: Bump client and server timeouts to 4h
Zack fixed this problem in ocp4-helpernode.  His message below:

I ran into this when testing OCS; some of our tests use 'oc rsh' with
long-ish runtimes, and they were all failing - while the same tests were
passing on AWS. After some googling, it appears that a four hour (!)
timeout is what's advised for haproxy in an on-prem k8s or OpenShift
deployment.

This commit integrates Zack's fix on the devel branch.  It will
need to be re-integrated later when it makes its way to master.

The same haproxy is applied to the host kvm environment.

Signed-off-by: Luke Browning <lukebrowning@us.ibm.com>

--- a/files/site.tfvars.in
+++ b/files/site.tfvars.in
@@ -24,6 +24,7 @@ dns_forwarders              = "192.168.88.1;$DNS_BACKUP_SERVER"
 chrony_config               = "$CHRONY_CONFIG"
 chrony_config_servers       = [$CHRONY_CONFIG_SERVERS]
 
+helpernode_tag              = "e18574164cbb2185c97fda6c7a66e4a358e78d0f"
 install_playbook_tag        = "$INSTALL_PLAYBOOK_TAG"
 
 storage_type                = ""
