--- a/files/haproxy.cfg
+++ b/files/haproxy.cfg
@@ -23,8 +23,8 @@ defaults
     timeout http-request    10s
     timeout queue           1m
     timeout connect         10s
-    timeout client          5m
-    timeout server          5m
+    timeout client          4h
+    timeout server          4h
     timeout http-keep-alive 10s
     timeout check           10s
     maxconn                 3000
