Use quay.io/rhceph-dev for ocs-must-gather image for ocp mg
Per Manoj, quay.io/openshift is not multi-arch but does not support power

Per Vasu Kulkarni, specify tests/ for run-ci command for perf, wld, scale

Signed-off-by: Luke Browning <lukebrowning@us.ibm.com>

--- a/files/ocs-ci-conf.yaml
+++ b/files/ocs-ci-conf.yaml
@@ -1,3 +1,7 @@
 ---
 ENV_DATA:
   local_storage_allow_rotational_disks: true
+REPORTING:
+  ocp_must_gather_image: quay.io/rhceph-dev/ocs-must-gather
+UPGRADE:
+  ocp_arch: ppc64le
