--- a/files/ocs-ci-conf.yaml
+++ b/files/ocs-ci-conf.yaml
@@ -2,6 +2,6 @@
 ENV_DATA:
   local_storage_allow_rotational_disks: true
 REPORTING:
-  ocp_must_gather_image: quay.io/rhceph-dev/ocs-must-gather
+  ocp_must_gather_image: quay.io/rhceph-dev/ocs-must-gather:latest-4.6
 UPGRADE:
   ocp_arch: ppc64le
