Update submodule ocs-ci hash to latest
Signed-off-by: Luke Browning <lukebrowning@us.ibm.com>

--- a/files/ocs-ci-conf.yaml
+++ b/files/ocs-ci-conf.yaml
@@ -1,6 +1,8 @@
 ---
 ENV_DATA:
   local_storage_allow_rotational_disks: true
+DEPLOYMENT:
+  image: quay.io/rhceph-dev/ocs-registry:latest
 REPORTING:
   ocp_must_gather_image: quay.io/rhceph-dev/ocs-must-gather:latest-4.6
 UPGRADE:
