--- a/files/kvm/haproxy.cfg
+++ b/files/kvm/haproxy.cfg
@@ -85,6 +85,10 @@ backend openshift-http
     server worker-3 192.168.88.24:80 check
     server worker-4 192.168.88.25:80 check
     server worker-5 192.168.88.26:80 check
+    server worker-6 192.168.88.27:80 check
+    server worker-7 192.168.88.28:80 check
+    server worker-8 192.168.88.29:80 check
+    server worker-9 192.168.88.30:80 check
 
 #---------------------------------------------------------------------
 #Frontend openshift HTTPS
@@ -107,4 +111,8 @@ backend openshift-https
     server worker-3 192.168.88.24:443 check
     server worker-4 192.168.88.25:443 check
     server worker-5 192.168.88.26:443 check
+    server worker-6 192.168.88.27:443 check
+    server worker-7 192.168.88.28:443 check
+    server worker-8 192.168.88.29:443 check
+    server worker-9 192.168.88.30:443 check
 
