Use release branches of submodules for support

--- a/files/kvm/site.tfvars.in
+++ b/files/kvm/site.tfvars.in
@@ -29,8 +29,4 @@ dns_forwarders              = "$CLUSTER_GATEWAY;$DNS_BACKUP_SERVER"
 chrony_config               = "$CHRONY_CONFIG"
 chrony_config_servers       = [$CHRONY_CONFIG_SERVERS]
 
-helpernode_tag              = "1ac7f276b537cd734240eda9ed554a254ba80629"
-install_playbook_tag        = "$INSTALL_PLAYBOOK_TAG"
-
-storage_type                = ""
-volume_size                 = 0
+storage_type                = "no"
