Code cleanup & restore Aaruni's deleted code for subscription renewal
Signed-off-by: Luke Browning <lukebrowning@us.ibm.com>

--- a/files/perf-fio/run_fio_pod.sh.in
+++ b/files/perf-fio/run_fio_pod.sh.in
@@ -21,4 +21,4 @@ fio --name=fio-fillup --filename=/var/lib/www/html/abcd --rw=randrw --bs=4k --di
 
 cd results
 
-tar -cvf ../fio-results.tar .
+tar -cvf ../fio-results.tar . >/dev/null 2>&1
