Enable rhcos kernel boot parm cma to improve powervs fio performance
Signed-off-by: Luke Browning <lukebrowning@us.ibm.com>

--- a/files/powervs/site.tfvars.in
+++ b/files/powervs/site.tfvars.in
@@ -40,3 +40,4 @@ worker_volume_size          = "$WORKER_VOLUME_SIZE"
 
 storage_type                = "no"
 
+rhcos_kernel_options        = [$RHCOS_KERNEL_ARGS]
