Restart nodes with oc status of DisabledScheduling
This occurs to a subset of node when setting kernel boot parameters.
The underlying playbooks warn about this, but say to wait for the
state to go to ready which doesn't always happen.  Restarting the
affected nodes solves the problem.

By default, the ocp4-upi-powervs release branch is obtained picking
up the latest code which seems to have issues with networking.  The
default proxy is changed to the IBM cloud.  Existing proxy in the
is disabled breaking pre-existing code.  So fix the ocp4-upi-powervs
head to just before the change in default and disable snat and
enable squid proxy explicitly as opposed to relying on defaults.

--- a/files/powervs/site.tfvars.in
+++ b/files/powervs/site.tfvars.in
@@ -32,6 +32,8 @@ dns_forwarders              = "$DNS_FORWARDERS"
 chrony_config               = "$CHRONY_CONFIG"
 chrony_config_servers       = [$CHRONY_CONFIG_SERVERS]
 
+setup_squid_proxy           = true
+
 # Master and Worker nodes
 
 worker_volume_size          = "$WORKER_VOLUME_SIZE"
@@ -41,3 +43,5 @@ worker_volume_size          = "$WORKER_VOLUME_SIZE"
 storage_type                = "no"
 
 rhcos_kernel_options        = [$RHCOS_KERNEL_ARGS]
+
+setup_snat                  = false
