Place elasticsearch on extra worker node
Isolate it from ceph worker nodes

Signed-off-by: Luke Browning <lukebrowning@us.ibm.com>

--- a/files/powervs/env-ocs-ci.sh.in
+++ b/files/powervs/env-ocs-ci.sh.in
@@ -2,3 +2,4 @@ export PLATFORM=powervs
 export OCP_VERSION=$OCP_VERSION
 export OCS_VERSION=$OCS_VERSION
 export OCS_REGISTRY_IMAGE=$OCS_REGISTRY_IMAGE
+export KUBECONFIG=~/auth/kubeconfig
