--- a/files/powervm/site.tfvars.in
+++ b/files/powervm/site.tfvars.in
@@ -8,10 +8,10 @@ network_name		    = "$PVC_SUBNET_NAME"
 network_type                = "$PVC_SUBNET_TYPE"
 scg_id                      = "$PVC_SCG_ID"
 
-bastion                     = {instance_type = "$BASTION_COMPUTE_TEMPLATE", image_id = "$BASTION_IMAGE", "count" = 1}
-bootstrap                   = {instance_type = "$BOOTSTRAP_COMPUTE_TEMPLATE", image_id = "$RHCOS_IMAGE", "count" = $BOOTSTRAP_CNT}
-master                      = {instance_type = "$MASTER_COMPUTE_TEMPLATE", image_id = "$RHCOS_IMAGE", "count" = 3}
-worker                      = {instance_type = "$WORKER_COMPUTE_TEMPLATE", image_id = "$RHCOS_IMAGE", "count" = $WORKERS}
+bastion        = {instance_type = "$BASTION_COMPUTE_TEMPLATE", image_id = "$BASTION_IMAGE", "count" = 1}
+bootstrap      = {instance_type = "$BOOTSTRAP_COMPUTE_TEMPLATE", image_id = "$RHCOS_IMAGE", "count" = $BOOTSTRAP_CNT}
+master         = {instance_type = "$MASTER_COMPUTE_TEMPLATE", image_id = "$RHCOS_IMAGE", "count" = 3}
+worker         = {instance_type = "$WORKER_COMPUTE_TEMPLATE", image_id = "$RHCOS_IMAGE", "count" = $WORKERS, data_volume_count = 1, data_volume_size = "$WORKER_VOLUME_SIZE"}
 
 rhel_subscription_username      = "$RHID_USERNAME"
 rhel_subscription_password      = "$RHID_PASSWORD"
@@ -33,10 +33,6 @@ chrony_config_servers       = [$CHRONY_CONFIG_SERVERS]
 
 storage_type                = "notnfs"
 
-rhcos_kernel_options        = [$RHCOS_KERNEL_ARGS]
-
 ansible_extra_options       = "-v"
 
 install_playbook_tag        = "$INSTALL_PLAYBOOK_TAG"
-
-worker_volume_size          = "$WORKER_VOLUME_SIZE"
