--- a/files/powervs/env-ocs-ci.sh.in
+++ b/files/powervs/env-ocs-ci.sh.in
@@ -3,3 +3,8 @@ export OCP_VERSION=$OCP_VERSION
 export OCS_VERSION=$OCS_VERSION
 export OCS_REGISTRY_IMAGE=$OCS_REGISTRY_IMAGE
 export KUBECONFIG=~/auth/kubeconfig
+
+export PVS_API_KEY=$PVS_API_KEY
+export PVS_REGION=$PVS_REGION
+export PVS_ZONE=$PVS_ZONE
+export PVS_SERVICE_INSTANCE_ID=$PVS_SERVICE_INSTANCE_ID
