--- a/files/powervs/env-ocs-ci.sh.in
+++ b/files/powervs/env-ocs-ci.sh.in
@@ -8,3 +8,5 @@ export PVS_API_KEY=$PVS_API_KEY
 export PVS_REGION=$PVS_REGION
 export PVS_ZONE=$PVS_ZONE
 export PVS_SERVICE_INSTANCE_ID=$PVS_SERVICE_INSTANCE_ID
+export WORKER_VOLUMES=$WORKER_VOLUMES
+export WORKER_VOLUME_SIZE=$WORKER_VOLUME_SIZE
