Adding Vault Support
Signed-off-by: Aaruni Aggarwal <aaruniagg@gmail.com>

--- a/files/powervm/env-ocs-ci.sh.in
+++ b/files/powervm/env-ocs-ci.sh.in
@@ -11,3 +11,4 @@ export PVC_TENANT=$PVC_TENANT
 export PVC_HOST_GROUP=$PVC_HOST_GROUP
 export WORKER_VOLUMES=$WORKER_VOLUMES
 export WORKER_VOLUME_SIZE=$WORKER_VOLUME_SIZE
+export VAULT_SUPPORT=$VAULT_SUPPORT
