--- a/files/powervs/env-ocs-ci.sh.in
+++ b/files/powervs/env-ocs-ci.sh.in
@@ -10,3 +10,4 @@ export PVS_ZONE=$PVS_ZONE
 export PVS_SERVICE_INSTANCE_ID=$PVS_SERVICE_INSTANCE_ID
 export WORKER_VOLUMES=$WORKER_VOLUMES
 export WORKER_VOLUME_SIZE=$WORKER_VOLUME_SIZE
+export VAULT_SUPPORT=$VAULT_SUPPORT
