--- a/files/powervm/env-ocs-ci.sh.in
+++ b/files/powervm/env-ocs-ci.sh.in
@@ -12,3 +12,4 @@ export PVC_HOST_GROUP=$PVC_HOST_GROUP
 export WORKER_VOLUMES=$WORKER_VOLUMES
 export WORKER_VOLUME_SIZE=$WORKER_VOLUME_SIZE
 export VAULT_SUPPORT=$VAULT_SUPPORT
+export FIPS_ENABLEMENT=$FIPS_ENABLEMENT
