--- a/files/powervs/env-ocs-ci.sh.in
+++ b/files/powervs/env-ocs-ci.sh.in
@@ -11,3 +11,4 @@ export PVS_SERVICE_INSTANCE_ID=$PVS_SERVICE_INSTANCE_ID
 export WORKER_VOLUMES=$WORKER_VOLUMES
 export WORKER_VOLUME_SIZE=$WORKER_VOLUME_SIZE
 export VAULT_SUPPORT=$VAULT_SUPPORT
+export FIPS_ENABLEMENT=$FIPS_ENABLEMENT
